--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.calculadora1">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Calculadora1">
-        <activity android:name=".AgregarProducto"></activity>
+        android:theme="@style/Theme.Calculadora1"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".AgregarUsuario"/>
         <activity android:name=".MenuInicio"/>
-        <activity android:name=".MainActivity">
-
-
-
+        <activity android:name=".Menue"/>
+        <activity android:name=".ver"/>
+        <activity android:name=".MenuProductosUsuarios"/>
+        <activity android:name=".agregarProductos">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
